2015-04-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Fix peephole optimizer bug #2376.

2015-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/port.h,
	  src/z80/main.c,
	  src/z80/gen.c,
	  src/z80/peep.h,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def:
	  Fix peephole optimizer bug #2374, more efficient calls to _Noreturn functions.

2015-04-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c,
	  support/regression/tests/z88dk.c:
	  Fix peephole optimizer bug #2371.

2015-04-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglobl.h:
	  Silence warning.
	* src/z80/gen.c,
	  device/lib/*/__sdcc_call_hl.s,
	  device/lib/*/__sdcc_call_iy.s,
	  src/SDCCsymt.c:
	  Better handling of calls through function pointers.

2015-04-18 Ben Shi <powerstudio1st AT 163 DOT com>
	* sim/ucsim/configure.in:
	* sim/ucsim/configure:
	* sim/ucsim/packages_in.mk:
	  Do not build disabled ports.

2015-04-17 Ben Shi <powerstudio1st AT 163 DOT com>
	* sdas/linksrc/Makefile.in:
	  Fix the issue that "make install" of sdld* failed on Windows.

2015-04-16 Ben Shi <powerstudio1st AT 163 DOT com>
	* device/include/Makefile.in:
	  Fix the problem that the header files of ds400 are not installed.
	* sdas/linksrc/Makefile.in:
	  Do not install unnecessary sdld* for disabled ports.

2015-04-15 Ben Shi <powerstudio1st AT 163 DOT com>
	* Makefile.common.in:
	* Makefile.in:
	  Partially fix bug #2369.
	* configure:
	* configure.in:
	* device/lib/Makefile.in:
	* src/ds400/Makefile.in:
	* src/ds400/main.c:
	* src/ds400/main.h:
	  Delete the empty stuff src/ds400/ .
	* support/regression/tests/z88dk.c:
	  Fix compiling errors.

2015-04-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCsymt.h,
	  src/z80/main.c,
	  src/z80/gen.c,
	  support/regression/tests/z88dk.c:
	  Support for __z88dk_callee calling convention on the caller side.

2015-04-11 Ben Shi <powerstudio1st AT 163 DOT com>